# ChangeLog for www-servers/mongrel
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/mongrel/ChangeLog,v 1.41 2011/04/24 17:38:47 armin76 Exp $

  24 Apr 2011; Raúl Porcel <armin76@gentoo.org> mongrel-1.1.5-r2.ebuild:
  sparc stable wrt #349877

  17 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> mongrel-1.1.5-r2.ebuild:
  ppc/ppc64 stable wrt #349877

  14 Jan 2011; Markos Chandras <hwoarang@gentoo.org> mongrel-1.1.5-r2.ebuild:
  Stable on amd64 wrt bug #349877

  11 Jan 2011; Markus Meier <maekke@gentoo.org> mongrel-1.1.5-r2.ebuild:
  x86 stable, bug #349877

  13 Dec 2010; Hans de Graaff <graaff@gentoo.org> mongrel-1.1.5-r2.ebuild:
  Fix compilation on macos.

  07 Feb 2010; Raúl Porcel <armin76@gentoo.org> mongrel-1.1.5-r2.ebuild:
  Add ~sparc wrt #301925

*mongrel-1.1.5-r2 (23 Jan 2010)

  23 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -mongrel-1.1.5-r1.ebuild, +mongrel-1.1.5-r2.ebuild:
  Fix the converted package (build and install the C extension); run tests
  (manually), and add support for JRuby.

*mongrel-1.1.5-r1 (23 Jan 2010)

  23 Jan 2010; Hans de Graaff <graaff@gentoo.org> +mongrel-1.1.5-r1.ebuild:
  Convert to ruby-fakegem. Drop sparc keyword: #301925.

  15 Jan 2010; Christian Faulhammer <fauli@gentoo.org> mongrel-1.1.5.ebuild:
  Transfer Prefix keywords

  23 Aug 2009; Hans de Graaff <graaff@gentoo.org> -mongrel-1.1.3.ebuild:
  Remove old version.

  30 Nov 2008; Hans de Graaff <graaff@gentoo.org> mongrel-1.1.3.ebuild,
  mongrel-1.1.5.ebuild:
  Current versions of mongrel are not yet fully compatible with Ruby 1.9. Thanks
  to Alex Legler for noticing.

  28 Oct 2008; Brent Baude <ranger@gentoo.org> mongrel-1.1.5.ebuild:
  stable ppc64, bug 240375

  08 Oct 2008; Markus Meier <maekke@gentoo.org> mongrel-1.1.5.ebuild:
  amd64/x86 stable, bug #240375

  07 Oct 2008; Friedrich Oslage <bluebird@gentoo.org> mongrel-1.1.5.ebuild:
  Stable on sparc, bug #240375
