@@ -1,15 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST mongrel-1.1.5.gem 105472 RMD160 d678d5a07e4ae61c28d0174f1c591a261a335056 SHA1 ce2393a56d49c5fcf726c744917b9a37b6daa743 SHA256 3e1e96fa04bb7e52d8677c43798e917ff2ed8b12fef12678c46eb07871af260e
 EBUILD mongrel-1.1.5-r2.ebuild 2117 RMD160 f05ffbd2475a8df634b8389d4af2c7c22c3251d5 SHA1 98c31f8db9fab5b4892aa8027279884039c60344 SHA256 10ec3bb1ded3fef76acce3cb5afd9bb4666f214b738c97c424a51aa47a16869b
-EBUILD mongrel-1.1.5.ebuild 688 RMD160 31411f4683d34aefadbc629a5b1a9e30f38cf625 SHA1 0bb903a6abea5b080df0475a209941cbc2592661 SHA256 8b35c6342a08077127ed06ba88355e4dfe0e956b76359f1c70fcef67d84a3bb0
-MISC ChangeLog 5032 RMD160 f156e557e9b2d360c33a931e8f4b6bb3bc2ebbb7 SHA1 d4c59831483abdfd15d5a758e2542400f0138ac6 SHA256 1d4ce40129083e75d3b16ed4f6273eab1a7ad88fa7f910f9d5add109fa43e38f
+MISC ChangeLog 5127 RMD160 b610b018a0ce20f1250bbaadff76a0ef2a223171 SHA1 19116cce647c215d7168cf51dcc3806e307b4d2f SHA256 9899e4764d7b71009983fea7e81fb0638de78c10505966a3ae6374784e7805bd
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk20YC0ACgkQuQc30/atMkD6xQCeIVWA0aOMdQlt7CTxT6YjS4na
-RSEAn1WTpWysg3qrA6SQ47zD+U9BHo6T
-=gIjH
+iF4EAREIAAYFAk20ZgcACgkQrnu0mw69JkoHsAD9GSYEAfrtmaq2g4Pg1/X3/683
+A/DOhage0Kfd41B0ojEA/is7doklx5rHvHfSSeQRg11xsaFnl8vPIMfAeXc8TinV
+=1IAX
 -----END PGP SIGNATURE-----
